# wine_project

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
dashboard/: dashboard.py
migrations/: env.py
migrations/versions/: d2a6a47f190c_create_initial_tables.py
mlruns/0/: meta.yaml
tests/: conftest.py  test_api.py  test_wine.py
wine_project/: app.py  database.py  dataset_loader.py  settings.py
wine_project/ai_models/: discriminator.py  generator.py
wine_project/data_loaders/: dataset_loader.py  generate_validation_data.py
wine_project/models/: models.py
wine_project/routers/: dashboard.py  root.py  wines.py
wine_project/schemas/: schemas.py
wine_project/validation_data/: generate_validation_data.py
