[tool.poetry]
name = "wine-project"
version = "0.1.0"
description = ""
authors = ["Júlio Bernardes <juliocd.bernardes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.prod.dependencies]
pydantic-settings = "^2.8.1"
kagglehub = {extras = ["pandas-datasets"], version = "^0.3.11"}
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
fastapi = {extras = ["standard"], version = "^0.115.12"}


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
pytest = "^8.3.5"
ruff = "^0.11.4"
ipykernel = "^6.29.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = 'ruff check .&& ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev wine_project/app.py'
pre_test = 'task lint'
test = 'pytest -s --cov=wine_project -vv'
post_test = 'coverage html'
